# doc-convert

./: .env.example  .env.production  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: macos-build.yml  release.yml  windows-build.yml
config/: routes.toml
docs/: API.md  CONFIGURATION.md  KNOWN_ISSUES.md  M4_ACCEPTANCE.md  M6_RC_CHECKLIST.md  MVP_LIMITATIONS.md  PERFORMANCE_AND_TESTING.md  SECURITY_MVP.md  openapi.yaml
plugins/bundled/docling_adapter/: plugin.toml  plugin_main.py
plugins/bundled/markitdown_adapter/: plugin.toml  plugin_main.py
plugins/bundled/pandoc_wrapper/: plugin.toml  plugin_main.py
python/: pyproject.toml  requirements.txt
scripts/: bundle_python.mjs  dev_stack.sh  fetch_pandoc.py  gen_m4_fixtures.py  package_bundled_plugins.mjs  regression_m4.sh  run_m4_local.sh  run_without_cargo_target_dir.mjs  setup_python.sh  smoke_core.sh
src/: App.tsx  api.ts  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/pandoc/: NOTICE.txt
src-tauri/src/: commands.rs  lib.rs  main.rs  workers.rs
src-tauri/src/api/: convert.rs  health.rs  mod.rs  plugins.rs
src-tauri/src/core/: download_name.rs  lockfile.rs  mod.rs  router.rs  task.rs
src-tauri/src/infra/: bundled_paths.rs  config.rs  error.rs  fs_util.rs  logging.rs  mod.rs
src-tauri/src/plugin_host/: mod.rs  registry.rs  smoke_test.rs
tests/fixtures/m4/: README.txt  must_excel.xlsx  must_minimal.rtf  must_plain.txt  must_simple.html  must_slides.pptx  must_word.docx
